--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,12 @@
 /**************/
 /* CSS REMEDY */
 /**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
-}
 
 
 
-
+/* ALLE KLEUREN IN DE ROOT */
+/* --color-textred: black; */
+/* font size clamp */
 
 
 /*********************/
@@ -15,7 +14,8 @@
 /*********************/
 :root {
 	/* startje */
-	--color-text:#111;
+	--color-text:black;
+    --color-textblackbutton:white;
 	--color-background:#eee;
 }
 
@@ -28,16 +28,15 @@
 /****************/
 
 html, body {
+    width: 100vw;
     margin: 0;
     padding: 0;
 }
-
 
 header {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
     padding: 10px 0;
-    
     width: 100vw;
     z-index: 1000;
 }
@@ -55,224 +54,15 @@ nav ul li {
     margin: 0 15px;
 }
 
-.logo {
+nav ul li:nth-child(1) img {
     width: 20vw;
     margin-right: 22vw;
 }
 
-.menu-icon, .search-icon, .cart-icon {
+nav ul li:nth-child(2) img,
+nav ul li:nth-child(3) img,
+nav ul li:nth-child(4) img {
     width: 7vw;
 }
 
-/* eerste foto van schoenen */
-main section:nth-of-type(1) img { 
-    width: 100vw;
-    height: auto;
-}
 
-h1{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8vw;
-    margin-bottom: 0vh;
-    font-weight: 500;
-    font-size: 28px;
-}
-
-/* the northface official goretex */
-main section:nth-of-type(1) p {
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8vw;
-    margin-right: 8vw;
-    margin-top: 1vh;
-    font-weight: 400;
-    font-size: 20px;
-}
-
-p{
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8vw;
-    margin-right: 8vw;
-    margin-top: 1vh;
-    font-weight: 600;
-    font-size: 20px;
-}
-
-.black-button {
-    width: 90vw;
-    height: 7vh;
-    background-color: black;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    margin-left: 5vw;
-    border: none;
-    font-size: 3vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-}
-
-/* tweede foto van vrouw die klimt */
-main section:nth-of-type(2) img {
-    width: 100vw;
-    height: auto;
-    margin-top: 5vh;
-}
-
-h2{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 0vh;
-    font-weight: 500;
-    font-size: 28px;
-    text-align: center;
-}
-
-.black-button2 {
-    width: 30vw;
-    height: 7vh;
-    background-color: black;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    margin-left: 35vw;
-    border: none;
-    font-size: 3vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-}
-
-/* derde foto van 2 kinderen */
-main section:nth-of-type(3) img {
-    width: 90vw;
-    height: auto;
-    margin-left: 5vw;
-    margin-top: 15vh;
-}
-
-.black-button3 {
-    width: 30vw;
-    height: 7vh;
-    background-color: black;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    margin-left: 8vw;
-    border: none;
-    font-size: 3vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-}
-
-/* vierde foto van jonge met geblond haar */
-main section:nth-of-type(4) img {
-    width: 90vw;
-    height: auto;
-    margin-left: 5vw;
-    margin-top: 5vh;
-}
-
-
-/* CARROUSEL */
-
-.carrousellist{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style-type: none;
-    gap: 5vw;
-    overflow: hidden;
-    width: 100vw; 
-    overflow-x: auto; 
-    scroll-snap-type: x mandatory;
-}
-
-.carrousellist::-webkit-scrollbar {
-    display: none; /* Voor Chrome, Safari en Opera */
-}
-
-.carrouselfoto1 {
-    width: 80vw;
-    height: auto;
-    margin-left: 5vw;
-    margin-top: 5vh;
-}
-
-.carrouselfoto2 {
-    width: 80vw;
-    height: auto;
-    margin-top: 5vh;
-}
-
-.carrouselfoto4 {
-    width: 80vw;
-    height: auto;
-    margin-top: 5vh;
-    /* margin-right: 5vw; */
-}
-
-.carrousellist li {
-    scroll-snap-align: center; 
-    text-align: center; 
-}
-
-.carousel-button {
-    width: 50vw;
-    height: 7vh;
-    background-color: white;
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    margin-left: 20vw;
-    border: 2px solid black;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    font-weight: 500;
-}
-
-.carousel-button2 {
-    width: 50vw;
-    height: 7vh;
-    background-color: white;
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    margin-left: 25vw;
-    border: 2px solid black;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-    font-weight: 500;
-}
-/* EINDE CARROUSEL */
-
-
-
-.middentekst{
-    color: black;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 15vh;
-    margin-bottom: 0;
-    font-weight: 600;
-    font-size: 20px;
-    text-align: center;
-}
-.kleinetekst{
-    color: 2A2A2A;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 1vh;
-    font-weight: 300;
-    font-size: 14px;
-    text-align: center;
-}
