--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
 	--color-text:black;
     --color-textblackbutton:white;
 	--color-background:#eee;
+    --color-lichtetext:2A2A2A;
 }
 
 
@@ -28,7 +29,7 @@
 /****************/
 
 html, body {
-    width: 100vw;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
 }
@@ -37,7 +38,7 @@ header {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
     padding: 10px 0;
-    width: 100vw;
+    max-width: 100vw;
     z-index: 1000;
 }
 
@@ -66,3 +67,77 @@ nav ul li:nth-child(4) img {
 }
 
 
+main section:nth-of-type(6) h2{
+    color: var(--color-text);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 15vh;
+    margin-bottom: 0;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+}
+main section:nth-of-type(6) p{
+    color:var(--color-lichtetext);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 1vh;
+    font-weight: 300;
+    font-size: 14px;
+    text-align: center;
+}
+
+/* FOOTER */
+
+summary {
+    list-style: none; 
+    font-size: 18px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main section:nth-of-type(7) {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+details[open] summary img {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
+}
+  
+summary::-webkit-details-marker {
+    display: none;
+}
+
+summary img {
+    transition: transform 0.3s ease;
+}
+
+main section:nth-of-type(7) details:first-of-type{
+    margin-top: 4vh;
+}
+
+main section:nth-of-type(7) details{
+
+    border-top: 1px solid lightgrey ;
+    border-bottom: 1px solid lightgrey;
+    padding: 20px;
+}
+
+main section:nth-of-type(7) ul{
+    list-style-type: none;    
+    padding: 0;
+}
+
+main section:nth-of-type(7) img{
+    width: 3vw;
+}
+
+main section:nth-of-type(7) li{
+    color:var(--color-lichtetext);
+    font-size: 15px;
+    font-weight: 300;
+    margin-bottom: 14px;
+}
+
+    
