--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -143,6 +143,7 @@ main section:nth-of-type(4) img {
 /* CARROUSEL */
 
 main section:nth-of-type(5) ul{
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     display: flex;
@@ -155,8 +156,9 @@ main section:nth-of-type(5) ul{
 }
 
 main section:nth-of-type(5) ul::-webkit-scrollbar {
-    display: none; /* Voor Chrome, Safari en Opera */
+    display: none; 
 }
+
 
 main section:nth-of-type(5) ul li:nth-of-type(1) img {
     width: 80vw;
@@ -223,24 +225,3 @@ main section:nth-of-type(5) ul li:nth-of-type(4) button {
 
 
 
-main section:nth-of-type(6) h2{
-    color: var(--color-text);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 15vh;
-    margin-bottom: 0;
-    font-weight: 600;
-    font-size: 20px;
-    text-align: center;
-}
-main section:nth-of-type(6) p{
-    color: 2A2A2A;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 1vh;
-    font-weight: 300;
-    font-size: 14px;
-    text-align: center;
-}
-
-main section:nth-of-type(7) button{
-    width: 100vw;
-}
