--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@ summary {
     align-items: center;
 }
 
-main section:nth-of-type(7) {
+footer section:nth-of-type(1) {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -113,31 +113,224 @@ summary img {
     transition: transform 0.3s ease;
 }
 
-main section:nth-of-type(7) details:first-of-type{
+footer section:nth-of-type(1) details:first-of-type{
     margin-top: 4vh;
 }
 
-main section:nth-of-type(7) details{
+footer section:nth-of-type(1) details{
 
     border-top: 1px solid lightgrey ;
     border-bottom: 1px solid lightgrey;
     padding: 20px;
 }
 
-main section:nth-of-type(7) ul{
+footer section:nth-of-type(1) ul{
     list-style-type: none;    
     padding: 0;
 }
 
-main section:nth-of-type(7) img{
+footer section:nth-of-type(1) img{
     width: 3vw;
 }
 
-main section:nth-of-type(7) li{
+footer section:nth-of-type(1) li{
     color:var(--color-lichtetext);
     font-size: 15px;
     font-weight: 300;
     margin-bottom: 14px;
 }
+/* EINDE DROPDOWNS */
 
-    
+footer section:nth-of-type(2) {
+    background-color: #fff;
+    padding: 10px 0;
+    max-width: 100vw;
+    z-index: 1000;
+}
+
+footer section:nth-of-type(2) ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+footer section:nth-of-type(2) ul li {
+    margin: 0 15px;
+}
+
+footer section:nth-of-type(2) ul li:nth-child(1) img {
+    width: 20vw;
+    margin-right: 22vw;
+}
+
+footer section:nth-of-type(2) ul li:nth-child(2) img,
+footer section:nth-of-type(2) ul li:nth-child(3) img,
+footer section:nth-of-type(2) ul li:nth-child(4) img {
+    width: 7vw;
+}
+
+footer section:nth-of-type(3){
+    margin-top: 3vh;
+}
+
+footer h2 {
+    color: var(--color-text);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 0;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: left;
+
+    margin-left: 5vw;
+}
+
+footer p {
+    color:var(--color-lichtetext);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 1vh;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: left;
+
+    margin-left: 5vw;
+}
+
+
+footer section:nth-of-type(3) form {
+    display: flex;
+    justify-content: center; 
+    margin-top: 2vh; 
+  }
+  
+  footer section:nth-of-type(3) input[type="email"] {
+    width: 80vw; 
+    height: 4vh;
+    padding: 10px;
+    border: 1px solid black;
+    font-size: 12px; 
+    border-radius: 3px; 
+    /* outline: none;  */
+  }
+
+
+
+  footer section:nth-of-type(3) input[type="checkbox"] {
+    margin-left: 6vw;
+    margin-top: 4vw;
+
+    width: 20px;  /* Maak het checkbox-vakje groter */
+    height: 20px;
+    cursor: pointer;  /* Wijzig de cursor naar een pointer bij hover */
+  }
+
+
+
+  /* BEETJE MET SELECTOR SPELEN */
+  footer section:nth-of-type(3) label {
+    margin-left: 10px;
+
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:var(--color-lichtetext);
+    font-weight: 400;
+    font-size: 14px;
+  }
+
+
+
+  
+footer section:nth-of-type(3) input[type="email"]::placeholder {
+    color: gray;
+    transform: translate(0px, -8px);
+  }
+
+  main section:nth-of-type(6) button,
+  footer section:nth-of-type(3) button {
+    width: 90vw;
+    height: 7vh;
+    background-color: var(--color-blackbutton);
+    color: var(--color-textblackbutton);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 3vh;
+    /* margin-left: 5vw; */
+    border: none;
+    font-size: 3vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+}
+
+footer section:nth-of-type(4){
+    margin-top: 3vh;
+    border-top: 1px solid lightgrey ;
+    border-bottom: 1px solid lightgrey;
+    padding-top: 3vh;
+    padding-bottom: 5vh;
+}
+
+footer section:nth-of-type(4) button {
+    width: 90vw;
+    height: 7vh;
+    background-color: var(--color-blackbutton);
+    color: var(--color-textblackbutton);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 3vh;
+    /* margin-left: 5vw; */
+    border: none;
+    font-size: 3vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+
+}
+
+
+
+
+
+
+footer section:nth-of-type(5) ul{
+    list-style-type: none;    
+    display: flex;    
+    padding: 0;
+    max-width: 40vw;
+    justify-content: space-between;
+
+    margin-left: 5vw;
+}
+
+footer section:nth-of-type(5) ul li img{
+    max-width: 5vw;
+}
+
+
+
+
+
+
+
+
+footer section:nth-of-type(6){
+    margin-top: 3vh;
+    border-top: 1px solid lightgrey ;
+    border-bottom: 1px solid lightgrey;
+    padding-top: 3vh;
+    padding-bottom: 5vh;
+}
+
+footer section:nth-of-type(6) ul{
+    list-style-type: none;    
+    padding: 0;
+}
+
+footer section:nth-of-type(6) li{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:var(--color-text);
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 14px;
+}
