--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -9,7 +9,25 @@
     --color-textwhitebutton:black;
 }
 
+/* CENTREREN/POSITIONERING */
 
+main section:nth-of-type(1) {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
+main section:nth-of-type(2) {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
+main section:nth-of-type(6) {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
 
 
 
@@ -20,44 +38,43 @@ main section:nth-of-type(1) img {
     height: auto;
 }
 
+
+
 h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8vw;
-    margin-bottom: 0vh;
     font-weight: 500;
-    font-size: 28px;
+    font-size: 28px;    
+    
+    /* margin-left: 8vw; */
+    margin: 0;
+
+
+    left: 5vw;
 }
 
 /* the northface official goretex */
-main section:nth-of-type(1) p {
+main section:nth-of-type(1) p,
+main section:nth-of-type(3) p,
+main section:nth-of-type(4) p {
     color: var(--color-text);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8vw;
-    margin-right: 8vw;
-    margin-top: 1vh;
     font-weight: 400;
     font-size: 20px;
+    margin: 0;
+    
+    /* margin-left: 8vw;
+    margin-right: 8vw; */
+    /* margin-top: 1vh; */
 }
 
-p{
-    color: var(--color-text);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 8vw;
-    margin-right: 8vw;
-    margin-top: 1vh;
-    font-weight: 600;
-    font-size: 20px;
-}
-
-main section:nth-of-type(1) button,
-main section:nth-of-type(6) button {
+main section:nth-of-type(1) button {
     width: 90vw;
     height: 7vh;
     background-color: var(--color-blackbutton);
     color: var(--color-textblackbutton);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 3vh;
-    margin-left: 5vw;
+    /* margin-left: 5vw; */
     border: none;
     font-size: 3vh;
     display: flex;
@@ -89,7 +106,7 @@ main section:nth-of-type(2) button {
     color: var(--color-textblackbutton);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 3vh;
-    margin-left: 35vw;
+    /* margin-left: 35vw; */
     border: none;
     font-size: 3vh;
     display: flex;
@@ -143,14 +160,14 @@ main section:nth-of-type(4) img {
 /* CARROUSEL */
 
 main section:nth-of-type(5) ul{
-    max-width: 100vw;
+    width: 100vw;     
+    max-width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
     list-style-type: none;
     gap: 5vw;
     overflow: hidden;
-    width: 100vw; 
     overflow-x: auto; 
     scroll-snap-type: x mandatory;
 }
