--- a/styles/stylehome.css
+++ b/styles/stylehome.css
@@ -12,15 +12,81 @@
 /* CENTREREN/POSITIONERING */
 
 main section:nth-of-type(1) {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
+    width: 100%;
+
+    display: grid;
+    row-gap: 3vh;
+
+    margin: 0;
+    padding: 0;
+
 }
+
+main section:nth-of-type(1) img { 
+    width: 100%;
+    height: auto;
+
+    grid-column-start: 1;
+    grid-column-end: 6;
+    margin: 0; 
+    padding: 0; 
+    
+}
+
+h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 28px;   
+    
+    grid-column-start: 2;
+    grid-column-end: 5;
+    /* margin-left: 8vw; */
+    margin: 0;
+
+
+}
+
+
+main section:nth-of-type(1) p {
+    color: var(--color-text);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    margin: 0;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
+    /* margin-left: 8vw;
+    margin-right: 8vw; */
+    /* margin-top: 1vh; */
+}
+
+main section:nth-of-type(1) button {
+    width: 80vw;
+    height: 7vh;
+    background-color: var(--color-blackbutton);
+    color: var(--color-textblackbutton);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: none;
+    font-size: 3vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+
+    grid-column-end: 5;
+    grid-column-start: 2;
+}
+
+
+
 
 main section:nth-of-type(2) {
     display: flex;
     flex-direction: column; 
     align-items: center;
+
+    
 }
 
 main section:nth-of-type(6) {
@@ -33,24 +99,10 @@ main section:nth-of-type(6) {
 
 
 /* eerste foto van schoenen */
-main section:nth-of-type(1) img { 
-    width: 100%;
-    height: auto;
-}
 
 
 
-h1{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    font-size: 28px;    
-    
-    /* margin-left: 8vw; */
-    margin: 0;
 
-
-    left: 5vw;
-}
 
 /* the northface official goretex */
 main section:nth-of-type(1) p,
@@ -61,27 +113,16 @@ main section:nth-of-type(4) p {
     font-weight: 400;
     font-size: 20px;
     margin: 0;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
     
     /* margin-left: 8vw;
     margin-right: 8vw; */
     /* margin-top: 1vh; */
 }
 
-main section:nth-of-type(1) button {
-    width: 90vw;
-    height: 7vh;
-    background-color: var(--color-blackbutton);
-    color: var(--color-textblackbutton);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    /* margin-left: 5vw; */
-    border: none;
-    font-size: 3vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
-}
+
 
 /* tweede foto van vrouw die klimt */
 
@@ -117,18 +158,22 @@ main section:nth-of-type(2) button {
 
 /* derde foto van 2 kinderen */
 
-/* main section:nth-of-type(3){
-    display: flex;
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
-} */
+main section:nth-of-type(3){
+    width: 100%;
+    
+    display: grid;
+    row-gap: 3vh;
+}
 
 main section:nth-of-type(3) img {
     width: 90vw;
     height: auto;
-    margin-left: 5vw;
     margin-top: 15vh;
+
+    grid-column-start: 1;
+    grid-column-end: 6;
+    margin: 0; 
+    padding: 0; 
 }
 
 main section:nth-of-type(3) button,
@@ -138,22 +183,34 @@ main section:nth-of-type(4) button {
     background-color: var(--color-blackbutton);
     color: var(--color-textblackbutton);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    margin-left: 8vw;
     border: none;
     font-size: 3vh;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 25px;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
+
+}
+
+main section:nth-of-type(4){
+    width: 100%;
+    display: grid;
+    row-gap: 3vh;
 }
 
 /* vierde foto van jonge met geblond haar */
 main section:nth-of-type(4) img {
     width: 90vw;
     height: auto;
-    margin-left: 5vw;
     margin-top: 5vh;
+
+    grid-column-start: 1;
+    grid-column-end: 6;
+    margin: 0; 
+    padding: 0; 
 }
 
 
@@ -175,7 +232,6 @@ main section:nth-of-type(5) ul{
 main section:nth-of-type(5) ul::-webkit-scrollbar {
     display: none; 
 }
-
 
 main section:nth-of-type(5) ul li:nth-of-type(1) img {
     width: 80vw;
