--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+/* @font-face voor de fonts         */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:wght@400;500;700&display=swap');
+
+
 /**************/
 /* CSS REMEDY */
 /**************/
@@ -18,6 +22,11 @@
     --color-textblackbutton:white;
 	--color-background:#eee;
     --color-lichtetext:2A2A2A;
+    --color-blackbutton: black;
+    --color-whitebutton: white;
+    --color-textwhitebutton:black;
+
+    --font-textroboto: 'Roboto', sans-serif;
 }
 
 
@@ -27,6 +36,11 @@
 /****************/
 /* JOUW STYLING */
 /****************/
+
+
+p,h1,h2{
+    font-family: var(--font-textroboto);
+}
 
 html, body {
     max-width: 100vw;
@@ -40,6 +54,9 @@ header {
     padding: 10px 0;
     max-width: 100vw;
     z-index: 1000;
+    
+    position: sticky;
+    top: 0;
 }
 
 nav:nth-of-type(2) ul {
@@ -51,7 +68,7 @@ nav:nth-of-type(2) ul {
     list-style-type: none;
 }
 
-navnav:nth-of-type(2) ul li {
+nav:nth-of-type(2) ul li {
     margin: 0 15px;
 }
 
@@ -67,25 +84,60 @@ nav ul li:nth-child(4) img {
 }
 
 
-main section:nth-of-type(6) h2{
+/* FOOTER */
+footer{
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+
+footer h2{
+    font-size: 20px;
+    margin: 0;
+}
+
+footer section:nth-of-type(1) {
+    display: grid;
+    row-gap: 2vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    grid-template-columns: 2rem 1fr 1fr 1fr 2rem; 
+    margin-top: 5vh;
+}
+
+
+footer section:nth-of-type(1) h2{
     color: var(--color-text);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 15vh;
-    margin-bottom: 0;
     font-weight: 600;
     font-size: 20px;
     text-align: center;
-}
-main section:nth-of-type(6) p{
-    color:var(--color-lichtetext);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 1vh;
-    font-weight: 300;
-    font-size: 14px;
-    text-align: center;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
 }
 
-/* FOOTER */
+footer section:nth-of-type(1) p{
+    color:var(--color-lichtetext);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 1em;
+    text-align: center;
+
+    margin: 0;
+    grid-column-start: 2;
+    grid-column-end: 5;
+}
+
+footer section:nth-of-type(1) button{
+    grid-column-start: 2;
+    grid-column-end: 5;
+    margin: 0;
+}
+
+
 
 summary {
     list-style: none; 
@@ -96,7 +148,7 @@ summary {
     align-items: center;
 }
 
-footer section:nth-of-type(1) {
+footer section:nth-of-type(2) {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -113,27 +165,25 @@ summary img {
     transition: transform 0.3s ease;
 }
 
-footer section:nth-of-type(1) details:first-of-type{
-    margin-top: 4vh;
-}
 
-footer section:nth-of-type(1) details{
+
+footer section:nth-of-type(2) details{
 
     border-top: 1px solid lightgrey ;
     border-bottom: 1px solid lightgrey;
     padding: 20px;
 }
 
-footer section:nth-of-type(1) ul{
+footer section:nth-of-type(2) ul{
     list-style-type: none;    
     padding: 0;
 }
 
-footer section:nth-of-type(1) img{
+footer section:nth-of-type(2) img{
     width: 3vw;
 }
 
-footer section:nth-of-type(1) li{
+footer section:nth-of-type(2) li{
     color:var(--color-lichtetext);
     font-size: 15px;
     font-weight: 300;
@@ -141,14 +191,13 @@ footer section:nth-of-type(1) li{
 }
 /* EINDE DROPDOWNS */
 
-footer section:nth-of-type(2) {
+footer section:nth-of-type(3) {
     background-color: #fff;
     padding: 10px 0;
     max-width: 100vw;
-    z-index: 1000;
 }
 
-footer section:nth-of-type(2) ul {
+footer section:nth-of-type(3) ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -157,153 +206,189 @@ footer section:nth-of-type(2) ul {
     list-style-type: none;
 }
 
-footer section:nth-of-type(2) ul li {
+footer section:nth-of-type(3) ul li {
     margin: 0 15px;
 }
 
-footer section:nth-of-type(2) ul li:nth-child(1) img {
+footer section:nth-of-type(3) ul li:nth-child(1) img {
     width: 20vw;
     margin-right: 22vw;
 }
 
-footer section:nth-of-type(2) ul li:nth-child(2) img,
-footer section:nth-of-type(2) ul li:nth-child(3) img,
-footer section:nth-of-type(2) ul li:nth-child(4) img {
+footer section:nth-of-type(3) ul li:nth-child(2) img,
+footer section:nth-of-type(3) ul li:nth-child(3) img,
+footer section:nth-of-type(3) ul li:nth-child(4) img {
     width: 7vw;
 }
 
-footer section:nth-of-type(3){
-    margin-top: 3vh;
+footer section:nth-of-type(4){
+    display: grid;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    grid-template-columns: 2rem 1fr 1fr 1fr 2rem; 
+    grid-column-start: 2;
+    grid-column-end: 5;
+
+    row-gap: 2vh;
 }
 
-footer h2 {
+footer section:nth-of-type(4) h2{
     color: var(--color-text);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 0;
     font-weight: 600;
     font-size: 20px;
     text-align: left;
-
-    margin-left: 5vw;
+    margin: 0;
+    grid-column-start: 2;
+    grid-column-end: 5;
 }
 
-footer p {
+footer section:nth-of-type(4) p{
     color:var(--color-lichtetext);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 1vh;
-    font-weight: 400;
-    font-size: 14px;
+    font-weight: 300;
+    font-size: 1em;
     text-align: left;
 
-    margin-left: 5vw;
+    margin: 0;
+    grid-column-start: 2;
+    grid-column-end: 5;
 }
 
 
-footer section:nth-of-type(3) form {
+footer section:nth-of-type(4) form {
     display: flex;
     justify-content: center; 
-    margin-top: 2vh; 
+
+    grid-column-start: 2;
+    grid-column-end: 5;
   }
   
-  footer section:nth-of-type(3) input[type="email"] {
-    width: 80vw; 
+  footer section:nth-of-type(4) input[type="email"] {
+    width: 82vw; 
     height: 4vh;
     padding: 10px;
     border: 1px solid black;
     font-size: 12px; 
     border-radius: 3px; 
-    /* outline: none;  */
+
+
   }
 
 
 
-  footer section:nth-of-type(3) input[type="checkbox"] {
-    margin-left: 6vw;
-    margin-top: 4vw;
+  footer section:nth-of-type(4) input[type="checkbox"] {
+
 
     width: 20px; 
     height: 20px;
     cursor: pointer; 
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 4;
   }
 
 
 
   /* BEETJE MET SELECTOR SPELEN */
-  footer section:nth-of-type(3) label {
-    margin-left: 10px;
-
+  footer section:nth-of-type(4) label {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:var(--color-lichtetext);
     font-weight: 400;
     font-size: 14px;
+    grid-column-start: 2;
+    grid-column-end: 5;
+
+    grid-row-start: 4;
   }
 
 
 
   
-footer section:nth-of-type(3) input[type="email"]::placeholder {
+footer section:nth-of-type(4) input[type="email"]::placeholder {
     color: gray;
     transform: translate(0px, -8px);
   }
 
-  main section:nth-of-type(6) button,
-  footer section:nth-of-type(3) button {
-    width: 90vw;
+  footer section:nth-of-type(1) button,
+  footer section:nth-of-type(4) button,
+  footer section:nth-of-type(5) button {
+    width: 82vw;
     height: 7vh;
     background-color: var(--color-blackbutton);
     color: var(--color-textblackbutton);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    /* margin-left: 5vw; */
     border: none;
     font-size: 3vh;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 25px;
+    grid-column-start: 2;
+    grid-column-end: 5;
 }
 
-footer section:nth-of-type(4){
-    margin-top: 3vh;
+footer section:nth-of-type(5){
     border-top: 1px solid lightgrey ;
     border-bottom: 1px solid lightgrey;
-    padding-top: 3vh;
-    padding-bottom: 5vh;
+
+    display: grid;
+    width: 100%;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    grid-template-columns: 2rem 1fr 1fr 1fr 2rem; 
+    row-gap: 2vh;
 }
 
-footer section:nth-of-type(4) button {
-    width: 90vw;
-    height: 7vh;
-    background-color: var(--color-blackbutton);
-    color: var(--color-textblackbutton);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 3vh;
-    /* margin-left: 5vw; */
-    border: none;
-    font-size: 3vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 25px;
+footer section:nth-of-type(5) h2{
+    text-align: left;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    margin: 0;
+    font-weight: 600;
+}
 
+footer section:nth-of-type(5) p{
+    grid-column-start: 2;
+    grid-column-end: 5;
+    margin: 0;
 }
 
 
 
 
+footer section:nth-of-type(6){
+    display: grid;
+    width: 100%;
+    margin: 0;
+    grid-template-columns: 2rem 1fr 1fr 1fr 2rem; 
+    row-gap: 2vh;
+}
 
+footer section:nth-of-type(6) h2{
+    text-align: left;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    font-weight: 600;
+}
 
-footer section:nth-of-type(5) ul{
+footer section:nth-of-type(6) ul{
     list-style-type: none;    
     display: flex;    
     padding: 0;
+    margin: 0;
     max-width: 40vw;
     justify-content: space-between;
 
-    margin-left: 5vw;
+    grid-column-start: 2;
+    grid-column-end: 5;
 }
 
-footer section:nth-of-type(5) ul li img{
+footer section:nth-of-type(6) ul li img{
     max-width: 5vw;
 }
 
@@ -314,25 +399,36 @@ footer section:nth-of-type(5) ul li img{
 
 
 
-footer section:nth-of-type(6){
-    margin-top: 3vh;
+footer section:nth-of-type(7){
     border-top: 1px solid lightgrey ;
     border-bottom: 1px solid lightgrey;
-    padding-top: 3vh;
-    padding-bottom: 5vh;
+
+    display: grid;
+    width: 100%;
+    margin: 0;
+    grid-template-columns: 2rem 1fr 1fr 1fr 2rem; 
+    row-gap: 2vh;
 }
 
-footer section:nth-of-type(6) ul{
+footer section:nth-of-type(7) ul{
+    display: flex;
+    flex-direction: column;
     list-style-type: none;    
-    padding: 0;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    padding-left: 0;
+    margin: 0;
+    gap: 2vh;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
 }
 
-footer section:nth-of-type(6) li{
+footer section:nth-of-type(7) li{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:var(--color-text);
     font-size: 15px;
     font-weight: 400;
-    margin-bottom: 14px;
 }
 
 
@@ -365,8 +461,6 @@ summary img {
     transition: transform 0.3s ease;
 }
 
-
-
 header details{
 
     border-top: 1px solid lightgrey ;
@@ -393,20 +487,16 @@ header nav:nth-of-type(1) li{
 
 header nav:nth-of-type(1) {
     /* IN EN UITKLAPPEN */
-    
     position:fixed;
     left:0;
     right:0;
     top:8vh;
-    bottom:40vh;
-    
+    bottom:0vh;
     translate:-100%;
     transition:0.2s;
-  }
+}
 
-
-  header nav:nth-of-type(1).toonMenu {
-    /* JOUW CODE HIER - stap 4 */
+header nav:nth-of-type(1).toonMenu {
     translate:0;
     background-color: white;
   }
