--- a/styles/style.css
+++ b/styles/style.css
@@ -25,14 +25,119 @@
     --color-blackbutton: black;
     --color-whitebutton: white;
     --color-textwhitebutton:black;
-
     --font-textroboto: 'Roboto', sans-serif;
+
+
+    --darkmodebackground: black;
+    --darkmodebutton: white;
+    --darkmodetext: white;
+}
+
+html {
+    color-scheme: light dark; 
+}
+
+
+html:has([value="light"]:checked) {
+    color-scheme: light;
+}
+
+html:has([value="dark"]:checked) {
+    color-scheme: dark;
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+} 
+
+html:has([value="dark"]:checked) button {
+    background-color: white;
+    color: var(--color-blackbutton)
+}
+
+    html:has([value="dark"]:checked) p {
+    color: var(--darkmodetext);
+}
+
+html:has([value="dark"]:checked) h2 {
+    color: var(--darkmodetext);
+}
+
+html:has([value="dark"]:checked) li {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+}
+
+html:has([value="dark"]:checked) summary {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
 }
 
 
 
+html:has([value="dark"]:checked) header {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+}
+
+html:has([value="dark"]:checked) a {
+    color: var(--darkmodetext);
+}
+
+html:has([value="dark"]:checked) details {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+}
+
+html:has([value="dark"]:checked) footer section:nth-of-type(3) {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+}
+
+html:has([value="dark"]:checked) header nav details:nth-of-type(1) details:nth-of-type(1) ul li a {
+    color: var(--darkmodetext);
+}
+
+html:has([value="dark"]:checked) nav ul li:nth-child(4) svg {
+    filter: invert(1);
+}
+
+html:has([value="dark"]:checked) main section:nth-of-type(3) ul > li > p:nth-of-type(2) {
+    color: var(--darkmodetext);
+}
 
 
+
+html:has([value="dark"]:checked) main nav:nth-of-type(1) p:nth-of-type(1) {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+}
+
+html:has([value="dark"]:checked) main nav:nth-of-type(1) button {
+    color: var(--darkmodetext);
+    background-color: var(--darkmodebackground);
+}
+
+/* IMAGES */
+html:has([value="dark"]:checked) nav img {
+    filter: invert(1);
+}
+
+html:has([value="dark"]:checked) footer img {
+    filter: invert(1);
+}
+
+/* footer section:last-of-type input[type="radio"]:nth-of-type(2):checked ~ html {
+        color-scheme: light;
+        background-color: white;
+        color: black;
+    }
+    
+footer section:last-of-type input[type="radio"]:nth-of-type(3):checked ~ html {
+        color-scheme: dark;
+        background-color: black;
+        color: white;
+    } */
+
+    
 /****************/
 /* JOUW STYLING */
 /****************/
@@ -52,7 +157,7 @@ header {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
     padding: 10px 0;
-    max-width: 100vw;
+    width: 100%;
     z-index: 1000;
     
     position: sticky;
@@ -66,6 +171,7 @@ nav:nth-of-type(2) ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
+    max-height: 10vw;
 }
 
 nav:nth-of-type(2) ul li {
@@ -81,7 +187,75 @@ nav ul li:nth-child(2) img,
 nav ul li:nth-child(3) img,
 nav ul li:nth-child(4) img {
     width: 7vw;
+    height: 7vw;
 }
+
+/* ANIMATIE */
+
+nav ul li:nth-child(4) svg {
+    width: 7vw;
+    cursor: pointer;  
+    
+}
+
+ /* nav ul li:nth-child(4) svg path {
+    transition: all 0.3s ease;
+  } 
+
+  nav ul li:nth-child(4) svg:hover path:nth-child(2) {
+    opacity: 0; 
+  }
+
+  nav ul li:nth-child(4) svg:hover path:nth-child(1) {
+
+    transform: translateY(40px) rotate(-45deg) scaleX(2) ; 
+  }
+
+  nav ul li:nth-child(4) svg:hover path:nth-child(3) {
+
+    transform: translateY(-22px) rotate(45deg) scaleX(1.5); 
+  } */
+
+
+  
+  
+  /*
+  
+  nav ul li:nth-child(4) svg:hover path:nth-child(1) {
+    transform: translateY(40vw) rotate(45deg); 
+  }
+
+  
+  nav ul li:nth-child(4) svg:hover path:nth-child(2) {
+    opacity: 0; 
+  }
+  
+  nav ul li:nth-child(4) svg:hover path:nth-child(3) {
+    transform: translateY(40vw) rotate(-45deg); 
+  } */
+
+
+/* @keyframes menuanimatie{
+    from {
+        <svg width="176" height="134" viewBox="0 0 176 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M5.17151 133.075H170.172C171.63 133.075 173.029 132.496 174.061 131.464C175.092 130.433 175.672 129.034 175.672 127.575C175.672 126.117 175.092 124.718 174.061 123.686C173.029 122.655 171.63 122.075 170.172 122.075H5.17151C3.71282 122.075 2.31387 122.655 1.28242 123.686C0.250973 124.718 -0.328491 126.117 -0.328491 127.575C-0.328491 129.034 0.250973 130.433 1.28242 131.464C2.31387 132.496 3.71282 133.075 5.17151 133.075Z" fill="#231F20"/>
+<path d="M38.8253 72.7368H170.5C171.959 72.7368 173.358 72.1573 174.389 71.1259C175.421 70.0944 176 68.6955 176 67.2368C176 65.7781 175.421 64.3791 174.389 63.3477C173.358 62.3162 171.959 61.7368 170.5 61.7368H38.8253C37.3666 61.7368 35.9677 62.3162 34.9362 63.3477C33.9048 64.3791 33.3253 65.7781 33.3253 67.2368C33.3253 68.6955 33.9048 70.0944 34.9362 71.1259C35.9677 72.1573 37.3666 72.7368 38.8253 72.7368Z" fill="#231F20"/>
+<path d="M67.8842 11.9247H170.348C171.807 11.9247 173.206 11.3452 174.237 10.3138C175.269 9.28232 175.848 7.88337 175.848 6.42467C175.848 4.96598 175.269 3.56704 174.237 2.53559C173.206 1.50414 171.807 0.924683 170.348 0.924683H67.8842C66.4255 0.924683 65.0265 1.50414 63.9951 2.53559C62.9636 3.56704 62.3842 4.96598 62.3842 6.42467C62.3842 7.88337 62.9636 9.28232 63.9951 10.3138C65.0265 11.3452 66.4255 11.9247 67.8842 11.9247Z" fill="#231F20"/>
+</svg>
+
+    }
+
+    to {
+        <svg width="137" height="136" viewBox="0 0 137 136" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M10.5519 134.134L134.597 10.0891C135.693 8.99252 136.309 7.50519 136.309 5.95433C136.309 4.40346 135.693 2.91614 134.597 1.81952C133.5 0.722892 132.013 0.106808 130.462 0.106808C128.911 0.106808 127.424 0.722881 126.327 1.81951L2.28229 125.864C1.18566 126.961 0.569591 128.448 0.569591 129.999C0.569591 131.55 1.18567 133.037 2.28229 134.134C3.37892 135.231 4.86625 135.847 6.41711 135.847C7.96797 135.847 9.4553 135.231 10.5519 134.134Z" fill="#231F20"/>
+<path d="M33.2246 41.2716L126.333 134.38C127.364 135.411 128.784 135.97 130.279 135.933C131.774 135.897 133.223 135.267 134.306 134.184C135.39 133.101 136.019 131.652 136.055 130.157C136.092 128.662 135.533 127.242 134.502 126.211L41.3937 33.1025C40.3623 32.0711 38.9427 31.5122 37.4474 31.5489C35.952 31.5855 34.5034 32.2147 33.4201 33.298C32.3368 34.3813 31.7076 35.8299 31.671 37.3253C31.6343 38.8206 32.1932 40.2402 33.2246 41.2716Z" fill="#231F20"/>
+<path d="M1.72747 9.66105L74.1805 82.114C75.2119 83.1455 76.6272 83.7087 78.1148 83.6797C79.6025 83.6507 81.0408 83.0319 82.1132 81.9595C83.1856 80.8871 83.8044 79.4488 83.8334 77.9611C83.8624 76.4735 83.2992 75.0582 82.2677 74.0268L9.81475 1.57378C8.7833 0.54233 7.36807 -0.020856 5.88039 0.00812804C4.39272 0.0371121 2.95447 0.655886 1.88203 1.72833C0.809586 2.80077 0.190807 4.23902 0.161823 5.7267C0.132838 7.21437 0.696024 8.6296 1.72747 9.66105Z" fill="#231F20"/>
+</svg>
+
+    }
+
+} */
+
 
 
 /* FOOTER */
@@ -110,7 +284,7 @@ footer section:nth-of-type(1) {
 
 footer section:nth-of-type(1) h2{
     color: var(--color-text);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     font-weight: 600;
     font-size: 20px;
     text-align: center;
@@ -121,7 +295,7 @@ footer section:nth-of-type(1) h2{
 
 footer section:nth-of-type(1) p{
     color:var(--color-lichtetext);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     font-weight: 300;
     font-size: 1em;
     text-align: center;
@@ -149,7 +323,7 @@ summary {
 }
 
 footer section:nth-of-type(2) {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
 }
 
 details[open] summary img {
@@ -172,6 +346,12 @@ footer section:nth-of-type(2) details{
     border-top: 1px solid lightgrey ;
     border-bottom: 1px solid lightgrey;
     padding: 20px;
+}
+
+footer section:nth-of-type(2) summary{
+    text-transform: uppercase;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 footer section:nth-of-type(2) ul{
@@ -236,7 +416,7 @@ footer section:nth-of-type(4){
 
 footer section:nth-of-type(4) h2{
     color: var(--color-text);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     font-weight: 600;
     font-size: 20px;
     text-align: left;
@@ -247,7 +427,7 @@ footer section:nth-of-type(4) h2{
 
 footer section:nth-of-type(4) p{
     color:var(--color-lichtetext);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     font-weight: 300;
     font-size: 1em;
     text-align: left;
@@ -294,10 +474,10 @@ footer section:nth-of-type(4) form {
 
   /* BEETJE MET SELECTOR SPELEN */
   footer section:nth-of-type(4) label {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     color:var(--color-lichtetext);
     font-weight: 400;
-    font-size: 14px;
+    font-size: 1em;
     grid-column-start: 2;
     grid-column-end: 5;
 
@@ -319,9 +499,10 @@ footer section:nth-of-type(4) input[type="email"]::placeholder {
     height: 7vh;
     background-color: var(--color-blackbutton);
     color: var(--color-textblackbutton);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     border: none;
-    font-size: 3vh;
+    font-size: 1.5em;
+    font-weight: 300;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -425,14 +606,35 @@ footer section:nth-of-type(7) ul{
 }
 
 footer section:nth-of-type(7) li{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     color:var(--color-text);
     font-size: 15px;
     font-weight: 400;
 }
 
+footer section:nth-of-type(7) label{
+    display: flex;
+    grid-column-start: 2;
+    grid-column-end: 5;
+}
+
+footer section:nth-of-type(7) a {
+    color: var(--color-text);
+    font-family: var(--font-textroboto);
+    font-weight: 400;
+    font-size: 20px;
+    margin: 0;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
+}
+
 
  /* HAMBURGER MENU  */
+
+ header nav:nth-of-type(1) {
+    overflow-y: auto;
+}
 
 
 summary {
@@ -442,8 +644,12 @@ summary {
     display: flex;
     justify-content: space-between;
     align-items: center;    
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     background-color: white;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    text-transform: uppercase;
 }
 
 
@@ -465,12 +671,15 @@ header details{
 
     border-top: 1px solid lightgrey ;
     border-bottom: 1px solid lightgrey;
-    padding: 20px;
+    /* padding: 20px; */
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 header nav:nth-of-type(1) ul{
     list-style-type: none;    
-    padding: 0;
+    padding: 0;    
+
 }
 
 header details summary img{
@@ -478,11 +687,15 @@ header details summary img{
 }
 
 header nav:nth-of-type(1) li{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:var(--color-lichtetext);
-    font-size: 15px;
-    font-weight: 300;
-    margin-bottom: 14px;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: var(--font-textroboto);
+
+    border-top: 1px solid lightgrey ;
+    border-bottom: 1px solid lightgrey;
+    padding: 20px;
+    
+
 }
 
 header nav:nth-of-type(1) {
@@ -499,4 +712,37 @@ header nav:nth-of-type(1) {
 header nav:nth-of-type(1).toonMenu {
     translate:0;
     background-color: white;
+  }
+
+
+  /* TWEEDE SUMMARY */
+
+
+header nav details:nth-of-type(1) details:nth-of-type(1) ul li{
+    color:var(--color-lichtetext);
+    font-size: 15px;
+    font-weight: 300;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+header nav details:nth-of-type(1) details:nth-of-type(1) ul li:nth-of-type(1){
+    margin-top: 20px;
+}
+
+header nav details:nth-of-type(1) details:nth-of-type(1) ul li a{
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+
+
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
   }
