--- a/styles/stylepage2.css
+++ b/styles/stylepage2.css
@@ -10,6 +10,7 @@ main section:nth-of-type(1){
 
     margin: 0;
     padding: 0;
+    padding-top: 20px;
 }
 
 main section:nth-of-type(1) p{
@@ -49,7 +50,7 @@ main section:nth-of-type(2){
 main section:nth-of-type(2) button{
     background-color: #fcfcfc;
     color: var(--color-textwhitebutton);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     border: none;
     font-size: 1em;
     display: flex;
@@ -79,7 +80,7 @@ main section:nth-of-type(2) button img{
 
 main section:nth-of-type(2) p{
     color:var(--color-lichtetext);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     font-weight: 300;
     font-size: 1em;
 
@@ -94,11 +95,11 @@ main section:nth-of-type(2) p{
 
 
 main section:nth-of-type(3) ul {
-    display: grid; /* Grid layout voor de producten */
-    grid-template-columns: repeat(2, 1fr); /* Twee kolommen naast elkaar */
-    gap: 15px; /* Ruimte tussen de items */
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px; 
     padding: 10px;
-    list-style: none; /* Geen opsommingstekens */
+    list-style: none; 
 }
 
 main section:nth-of-type(3) li {
@@ -140,7 +141,7 @@ main section:nth-of-type(3):has( [value="zwartgrijs"]:checked ) img[alt="Product
 
 main section:nth-of-type(3) ul > li > p:first-of-type {
     color:var(--color-lichtetext);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     /* margin-top: 1vh; */
     font-weight: 300;
     font-size: 1em;
@@ -160,7 +161,7 @@ main section:nth-of-type(3) ul > li > p:nth-of-type(2) {
 main section:nth-of-type(3) button {
     background-color: var(--color-whitebutton);
     color: var(--color-textwhitebutton);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font-textroboto);
     border: 1px solid black;
     font-size: 1em;
     display: flex;
@@ -265,3 +266,104 @@ input[type="radio"]:checked::after {
 	border-radius:50%;
 }
 
+
+
+/* FILTERMENU */
+/* IN EN UITKLAPPEN */
+main nav:nth-of-type(1) { 
+    position:fixed;
+    left:0;
+    right:30%;
+    top:9vh;
+    bottom:0vh;
+    translate:-100%;
+    transition:0.2s;
+
+    z-index: 4;
+    overflow-y: auto;
+}
+
+main nav:nth-of-type(1).toonfilterMenu {
+    translate:0;
+    background-color: white;
+}
+
+main nav:nth-of-type(1) p:nth-of-type(1){ 
+    font-size: 1.2em;
+    margin: 0;
+    padding: 15px;
+    font-weight: 500;
+}
+
+  main nav:nth-of-type(1) details img{
+    width: 3vw;
+}
+
+main nav:nth-of-type(1) details summary{
+    list-style: none; 
+    font-size: 1em;
+    font-weight: 300;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main nav:nth-of-type(1) li{
+    font-family: var(--font-textroboto);
+    list-style-type: none;
+
+}
+
+main nav:nth-of-type(1) details {
+    border-top: 1px solid lightgrey ;
+    border-bottom: 1px solid lightgrey;
+    padding: 20px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+main nav:nth-of-type(1) details[open] summary img {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease;
+}
+
+main nav:nth-of-type(1) button{ 
+    background-color: var(--color-blackbutton);
+    color: var(--color-textblackbutton);
+    font-family: var(--font-textroboto);
+    border: 1px solid black;
+    font-size: 1.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    font-weight: 500;
+    padding: 5px;
+    width: 80%;
+    height: 10%;
+    position: absolute;
+    bottom: 20px;
+    left: 10%;
+}
+
+
+
+main nav:nth-of-type(1) label{
+    font-family: var(--font-textroboto);
+    list-style-type: none;
+    display: flex;
+
+    /* padding-top: 10px;
+    padding-bottom: 10px; */
+    padding: 10px;
+    gap: 10px;
+}
+
+main nav:nth-of-type(1) input[type="radio"] {
+	width:1.5em;
+	height:1.5em;
+	margin:0;
+	background-color:white;
+	border-radius:50%;
+	border: solid 2px black ;
+}
